TODO: modal tools

--- a/TODO
+++ b/TODO
@@ -19,6 +19,7 @@ dream table (working title)
   x dropper tool
   x grid tool
   - cellref tool
+  - modal tools / tool thingy
   > right click drag on canvas thingies to resize
   - scaling (s + wheel)
   - import via drag and drop
