--- a/TODO
+++ b/TODO
@@ -56,11 +56,11 @@ dream table (working title)
   - canvases
     - a canvas is a 2d array of pixels that you can draw on
     - has a width and height and a scale (default = 1)
-    - has an grid of its own (default = width x height, so just one cell)
+    - has a grid of its own (default = single cell covering entire image)
     - subregions of the grid are called cells
     - cells can be named?
     - other thingies can reference the canvas, or a particular cell
-    - cells can be references to other canvases or their cells
+    - cells can be references to other cells
       - "cellref painter"
         - source: canvas with a grid
         - dest: canvas with a grid
@@ -104,7 +104,7 @@ dream table (working title)
   - build your own editor
   - export in a variety of formats
 
-- polish
+- polish / stretch
   - UI themes (gotham, solarized, monochrome dark, monochrome light)
   - customizable UI bitmaps (font, 9-patch window decorations)
   - z-order for thingies
@@ -127,10 +127,6 @@ dream table (working title)
   - multiple viewports, blender-style
   - ecosystem compat (aseprite, tiled, godot)
   - load fantasy console carts (pico-8, tic-80...)
-  - a trailer to promote it
-  - better names?
-    - collagen? collage, generate, glue / binding together (not very googleable)
-    - dream desk? (nope, taken by a crappy VR app)
 
 - extremely wild ideas!
   - scripting (lua or python or whatever)
